--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,7 @@ MONGO_WRITE_CONNECTION_STRING=mongodb://localhost:27017/nest
 REDIS_HOST=localhost
 REDIS_PORT=6379
 JWT_SECRET=SuperDuperSecret
+#MAILGUN_API_KEY=666
+#MAILGUN_API_DOMAIN=999
+FE_APP_URL=http://localhost:3001
+#FROM_EMAIL=555
