--- a/package.json
+++ b/package.json
@@ -29,17 +29,20 @@
     "@nestjs/mongoose": "^7.0.1",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.5.12",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "lodash": "^4.17.15",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.21",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -48,6 +51,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
+    "@types/mailgun-js": "^0.22.7",
     "@types/mongoose": "^5.7.29",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
