--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compose": "docker-compose up"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -50,6 +51,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
+    "@types/hapi__joi": "^17.1.3",
     "@types/jest": "25.2.3",
     "@types/mailgun-js": "^0.22.7",
     "@types/mongoose": "^5.7.29",
