forgot password mech

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-MONGO_WRITE_CONNECTION_STRING=mongodb://localhost:27017/nest
+MONGO_WRITE_CONNECTION_STRING=mongodb://root:12345@localhost:27017/admin
 REDIS_HOST=localhost
 REDIS_PORT=6379
 JWT_SECRET=SuperDuperSecret
